--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 
+<!DOCTYPE HTML>
+<html lang = "en">
+<head>
+  <!-- basic.html -->
+  <title>Responsive Layouts</title>
+  <meta charset = "UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="normalize.css">
+	<script type="text/javascript" src="script.js"></script>
+</head>
+
+<body
+  <div class="main-wrapper">
+
+<!-- NAV BAR -->
+
+
+
+
+
+
+  </div>
+</body>
+</html>
