--- a/index.html
+++ b/index.html
@@ -11,47 +11,40 @@
 </head>
 
 <body
-  <div class="main-wrapper">
+  <div class='main-wrapper'>
 
 <!--========= HEADER =========-->
-    <header>
-
-      <div class='logo'>
-        <h1>LOGO</h1>
-      </div>
-
-        <div class='nav-bar'>
-          <ul>
+    <div class='main-header'>
+      <h1 class='main-logo'><a href='#'>LOGO</a></h1>
+          <ul class='nav-bar'>
             <li> <a href='#'>List1</a></li>
             <li> <a href='#'>List2</a></li>
             <li> <a href='#'>List3</a></li>
             <li> <a href='#'>List4</a></li>
           </ul>
-        </div>
-
-    </header>
+    </div>
 
 <!--========= MAIN CONTENT =========-->
 
-<div class = 'mainContent'>
-  <h1>Main Content</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
+    <div class = 'mainContent'>
+      <h1>Main Content</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
 
 
 <!--========= SECONDARY CONTENT ========-->
 
-<div class='secondContent'>
-  <h3>Secondary Content</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</div>
+    <div class='secondContent'>
+      <h3>Secondary Content</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
 
 
 <!--======== FOOTER =======-->
 
-<footer>
-  <p>created by <strong>DING</strong></p>
-</footer>
+  <footer>
+    <p>created by <strong>DING</strong></p>
+  </footer>
 
 
 
