--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class='main-wrapper'>
 
 <!--========= HEADER =========-->
+<header>
     <div class='main-header'>
       <h1 class='main-logo'><a href='#'>LOGO</a></h1>
           <ul class='nav-bar'>
@@ -23,10 +24,14 @@
             <li> <a href='#'>List4</a></li>
           </ul>
     </div>
+    <div class ='main-banner'>
+      <h1>This in my main banner</h1>
+    </div>
+</header>
 
 <!--========= MAIN CONTENT =========-->
 
-    <div class = 'mainContent'>
+    <div class = 'mainContent col'>
       <h1>Main Content</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
@@ -34,10 +39,11 @@
 
 <!--========= SECONDARY CONTENT ========-->
 
-    <div class='secondContent'>
-      <h3>Secondary Content</h3>
+    <div class='secondContent col'>
+      <h1>Secondary Content</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
+
 
 
 <!--======== FOOTER =======-->
